Componetizando estilos del texto

--- a/package.json
+++ b/package.json
@@ -33,6 +33,9 @@
     "parserOptions": {
       "sourceType": "module"
     },
+    "rules": {
+      "react/prop-types": "off"
+    },
     "extends": [
       "standard",
       "standard-jsx",
