--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/webpack-config": "^18.0.1",
     "expo": "~48.0.10",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "react-router-native": "^6.10.0"
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
+    "@expo/webpack-config": "^18.0.4",
     "babel-eslint": "10.1.0",
     "eslint-config-standard": "16.0.3",
     "eslint-config-standard-jsx": "10.0.0",
