--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "expo": "~48.0.10",
     "expo-status-bar": "~1.4.4",
+    "formik": "^2.2.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
     "react-native-web": "~0.18.10",
-    "react-router-native": "^6.10.0"
+    "react-router-native": "^6.10.0",
+    "yup": "^1.1.0"
   },
   "devDependencies": {
     "@babel/core": "7.9.0",
