--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.12",
+    "apollo-boost": "^0.4.9",
     "expo": "~48.0.10",
     "expo-status-bar": "~1.4.4",
     "formik": "^2.2.9",
+    "graphql": "^15.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.6",
